// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no project 1`] = `
<div>
  <div
    class="chakra-skeleton css-1p3r0co"
  />
</div>
`;

exports[`renders correctly with validation 1`] = `
<div>
  <div
    class="css-7j57oz"
  >
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-uwkl65"
      >
        Project Issued To
      </p>
      <p
        class="chakra-text css-0"
      >
        <a
          class="chakra-link css-1081t4c"
          href="/project?id=a442a765-50f4-43dc-aa38-24e08d88c821&searchFlow=unit"
        >
          Proyecto de Mitigación Forestal Bonanza Verde
        </a>
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-uwkl65"
      >
        Vintage
      </p>
      <p
        class="chakra-text css-0"
      >
        2016
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-uwkl65"
      >
        Quantity
      </p>
      <p
        class="chakra-text css-0"
      >
        195
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-uwkl65"
      >
        Unit Type
      </p>
      <p
        class="chakra-text css-0"
      >
        Reduction - nature
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-uwkl65"
      >
        Monitoring Period
      </p>
      <p
        class="chakra-text css-0"
      >
        2010/04/30 - 2020/03/04
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-uwkl65"
      >
        Correspondingly Adjusted
      </p>
      <p
        class="chakra-text css-0"
      >
        --
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-uwkl65"
      >
        Issuance Tags
      </p>
      <div
        class="css-0"
      >
        <div
          class="css-0"
        >
          <p
            class="chakra-text css-0"
          >
            More information in the project link.
          </p>
          <p
            class="chakra-text css-0"
          >
            Cercarbono Standard.
          </p>
          <p
            class="chakra-text css-0"
          >
            Ecoregistry Serial Number of Issuance: CDC_12_2_1_322_14_CO_1_1_2019 .
          </p>
          <p
            class="chakra-text css-0"
          >
            Sector of issuance: Agriculture; forestry and fishing .
          </p>
          <button
            class="chakra-button css-4xx2wk"
            data-testid="verification-expand"
            style="color: rgb(0, 36, 44); font-weight: 500;"
            type="button"
          >
            View More
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly without tags 1`] = `
<div>
  <div
    class="css-7j57oz"
  >
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-uwkl65"
      >
        Project Issued To
      </p>
      <p
        class="chakra-text css-0"
      >
        <a
          class="chakra-link css-1081t4c"
          href="/project?id=a442a765-50f4-43dc-aa38-24e08d88c821&searchFlow=unit"
        >
          Proyecto de Mitigación Forestal Bonanza Verde
        </a>
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-uwkl65"
      >
        Vintage
      </p>
      <p
        class="chakra-text css-0"
      >
        2016
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-uwkl65"
      >
        Quantity
      </p>
      <p
        class="chakra-text css-0"
      >
        195
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-uwkl65"
      >
        Unit Type
      </p>
      <p
        class="chakra-text css-0"
      >
        Reduction - nature
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-uwkl65"
      >
        Monitoring Period
      </p>
      <p
        class="chakra-text css-0"
      >
        2010/04/30 - 2020/03/04
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-uwkl65"
      >
        Correspondingly Adjusted
      </p>
      <p
        class="chakra-text css-0"
      >
        --
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-uwkl65"
      >
        Issuance Tags
      </p>
      <div
        class="css-0"
      >
        --
      </div>
    </div>
  </div>
</div>
`;
